--- a/templates/Bio.html
+++ b/templates/Bio.html
@@ -2,6 +2,6 @@
   Environment, Economics, Equity<br>
   Sustainability at it's core, is about balance. From the macro-level challenges to the small everyday problems, we are faced with ever more complex factors to include in our decision matrix.
   <hr>
-  Dylan Phu is an holisitic problem solver looking to impact mission-driven organizations with his combination of technical skills, creativity, and love for people.
+  Dylan Phu is an holistic problem solver looking to impact mission-driven organizations with his combination of technical skills, creativity, and love for people.
   With experience across environmental research, challenging enterprise start-up and people-focused consulting, Dylan get excited over meaningful projects, innovative engineering, and thoughtful design.
 </div>
